tests/testcases/net2/errors/BCE0164-1.boo
"""
BCE0164-1.boo(8,7): BCE0164: Cannot infer generic arguments for method 'BCE0164_1Module.Method[of T]()'. Provide stronger type information through arguments, or explicitly state the generic arguments.
"""

def Method[of T]():
	pass
	
Method()
